# engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: EBO.h  VAO.h  VBO.h  camera.h  filesystem.h  mesh.h  model.h  shader.h  texture.h
resources/shaders/: fragmentShader.fs  lightSource.vs  vertexShader.vs
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
